# certifier

./: .dockerignore  .gitattributes  404.html  Dockerfile  README.md  entrypoint.sh  environment.yaml  environment.yml  index.html  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  draft.yaml  draft.yml  lint.yaml  registry.yaml  registry.yml  test-docker.yaml  test-docker.yml
certifier/: README.md  pyproject.toml
certifier/docs/: mkdocs.yml
certifier/docs/docs/: index.md
certifier/src/certifier/: __init__.py  __main__.py  utils.py
certifier/src/certifier/cert/: certify.py
certifier/src/certifier/cert/issuers/: base.py  selfsigned.py  traefik.py
certifier/src/certifier/config/: base.py  models.py  parse.py  source.py  utils.py
certifier/src/certifier/resources/: config.yaml
certifier/tests/functional/: test_certifier.py
search/: search_index.json
usage/: index.html
