[tool.poetry]
name = "certifier"
version = "0.2.1"
description = "self-signed certificates generator 🔒"
readme = "README.md"
authors = ["radio-aktywne <it@radioaktywne.pl>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/radio-aktywne/certifier"
documentation = "https://radio-aktywne.github.io/certifier"

[tool.poetry.dependencies]
python = "^3.10"
pydantic =  { version = "^1.10", extras = ["dotenv"] }
omegaconf = "^2.2"
typer = { version = "^0.6", extras = ["all"] }
trustme = "^0.9"
httpx = "^0.23"

[tool.poetry.group.poe.dependencies]
poethepoet = "^0.16"

[tool.poetry.group.dev.dependencies]
black = "^22"

[tool.poetry.group.test.dependencies]
pytest = "^7"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8"

[tool.poetry.scripts]
# cli entry point
certifier = "certifier.__main__:cli"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.poe]
verbosity = -1

[tool.poe.tasks.install]
help = "Install the package for local development in editable mode"
cmd = "poetry install --sync"

[tool.poe.tasks.update]
help = "Update the package dependencies"
cmd = "poetry update"

[tool.poe.tasks.format]
help = "Format the code"
cmd = "black ."

[tool.poe.tasks.lint]
help = "Lint the code"
cmd = "black . --check --diff"

[tool.poe.tasks.test]
help = "Run the tests"
cmd = "pytest"

[tool.poe.tasks.build-docs]
help = "Build the documentation"
cmd = "mkdocs build"
cwd = "docs"

[tool.poe.tasks.serve-docs]
help = "Serve the documentation"
cmd = "mkdocs serve"
cwd = "docs"

[tool.poe.tasks.docs]
help = "Build and serve the documentation"
ref = "serve-docs"
deps = ["build-docs"]

[tool.poe.tasks.clean]
help = "Clean the build artifacts"
cmd = "rm -rf build dist .eggs *.egg-info"

[tool.poe.tasks.build]
help = "Build the package"
cmd = "poetry build"

[tool.poe.tasks.run]
help = "Run the certifier package"
cmd = "certifier"

[tool.poe.tasks.build-docker]
help = "Build the docker image"
cmd = "docker build -t certifier .."

[tool.poe.tasks.run-docker]
help = "Run the certifier package in a docker container"
cmd = "docker run --rm -it certifier"

[tool.poe.tasks.docker]
help = "Build and run the docker image"
ref = "run-docker"
deps = ["build-docker"]

[tool.poe.tasks.build-docker-tests]
help = "Build the docker image for tests"
cmd = "docker build --target test -t certifier:test .."

[tool.poe.tasks.run-docker-tests]
help = "Run the tests in a docker container"
cmd = "docker run --rm -it certifier:test"

[tool.poe.tasks.docker-tests]
help = "Build and run the docker image for tests"
ref = "run-docker-tests"
deps = ["build-docker-tests"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
